--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
   playsinline
   webkit-playsinline   
   preload="auto"   
-  poster="images/lp12(main).webp"   
+  poster="images/large down photo (1).avif"   
   id="bgVideo"
 >
   <source src="images/1.mp4" type="video/mp4">
