--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#ae866a">
   <title>Neatgarms</title>
 
-<link rel="stylesheet" href="styles.min.css">
+<link rel="stylesheet" href="styles.css">
 
 
   <link rel="preload" as="video" href="images/1.mp4" type="video/mp4">
@@ -281,21 +281,6 @@
 </head>
 <body>
 
-<video
-  autoplay
-  muted
-  loop
-  playsinline
-  webkit-playsinline   
-  preload="auto"   
-  poster="images/large down photo (1).avif"   
-  id="bgVideo"
->
-  <source src="images/1.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-
-
 <!-- Subscription Popup -->
 <div class="overlay" id="subscriptionPopup" >
   <div class="popup-card" id="popupCard">
@@ -327,7 +312,7 @@
 
 <div class="thank-you-message hidden" id="thankYouMsg" data-aos="fade-down" data-aos-delay="400">
   <h1 class="brand-name">NEAT</h1>
-  <p class="drop-date">001 Of Nun : June 24, 2025</p>
+  <p class="drop-date">001 Of Nun : June 30th, 2025</p>
   <p class="attractive-text">You’re now in Neat’s inner circle. First to know. First to flex.</p>
   <p class="see-you">See You In The Inside</p>
 </div>
