--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#ae866a">
   <title>Neatgarms</title>
 
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.min.css">
 
 
   <link rel="preload" as="video" href="images/1.mp4" type="video/mp4">
