--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <link rel="stylesheet" href="styles.min.css">
 
-
-  <link rel="preload" as="video" href="images/1.mp4" type="video/mp4">
+<!-- Preload Dream Avenue font -->
+<link rel="preload" href="fonts/DreamAvenue.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="fonts/DreamAvenue.woff" as="font" type="font/woff" crossorigin>
 
    <link rel="canonical" href="https://neatgarms.com/" />
-   <link rel="preload" as="image" href="images/logo2.webp">
+   <link rel="preload" as="image" href="images/nobody\ gets.jpg">
 <!-- Preconnect to Google Fonts domains -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,7 +92,7 @@
   width: 80px;
   height: 80px;
   margin: 0 auto 1rem auto;
-  filter: drop-shadow(0 0 5px #ae866a);
+  filter: drop-shadow(0 0 5px #8a9381);
 }
 
 /* Logo image */
@@ -158,7 +159,7 @@
 }
 
 .subscribe-btn {
-  background: linear-gradient(to right, #ae866a, white, #ae866a);
+  background: linear-gradient(to right, #8a9381, white, #8a9381);
   border: none;
   padding: 0.8rem 2rem;
   border-radius: 10px;
@@ -294,9 +295,8 @@
      decoding="async">
     </div>
 
-
-    <h2>Snooze you lose</h2>
-    <p>NEAT VIP</p>
+<h2>Be First. Be NEAT.</h2>
+<p>It’s almost here. And it’s a game changer.</p>
 
     <form id="subscribeForm">
       <div class="input-group">
@@ -311,10 +311,11 @@
 
 
 <div class="thank-you-message hidden" id="thankYouMsg" data-aos="fade-down" data-aos-delay="400">
-  <h1 class="brand-name">NEAT</h1>
-  <p class="drop-date">001 Of Nun : June 30th, 2025</p>
-  <p class="attractive-text">You’re now in Neat’s inner circle. First to know. First to flex.</p>
-  <p class="see-you">See You In The Inside</p>
+  <h1 class="brand-name">Neat <br> Customs</h1>
+  <p class="drop-date">Think you know what's next? Think again.</p>
+  <p class="attractive-text">A new Neat experience is brewing, and it's built entirely around your creativity. <br>
+  We're flipping the script. Soon, you won't just wear the culture—you'll design it. Your concepts, brought to life through our lens.</p>
+  <p class="see-you">The launch is imminent. Get your ideas ready.</p>
 </div>
 
   </div>
