--- a/index.html
+++ b/index.html
@@ -311,12 +311,14 @@
 
 
 <div class="thank-you-message hidden" id="thankYouMsg" data-aos="fade-down" data-aos-delay="400">
-  <h1 class="brand-name">Neat <br> Customs</h1>
-  <p class="drop-date">Think you know what's next? Think again.</p>
-  <p class="attractive-text">A new Neat experience is brewing, and it's built entirely around your creativity. <br>
-  We're flipping the script. Soon, you won't just wear the culture—you'll design it. Your concepts, brought to life through our lens.</p>
-  <p class="see-you">The launch is imminent. Get your ideas ready.</p>
+  <h1 class="brand-name">Neatgarms</h1>
+  <p class="drop-date">Think you’ve seen it all? Think again.</p>
+  <p class="attractive-text">Something fresh is cooking at Neat. <br>
+We’re about to unveil a collection that pushes the limits of style and creativity. Stay tuned, something exciting is on the horizon.
+
+  <p class="see-you">The drop is coming. Keep your eyes peeled, your style ready, and your excitement on max.</p>
 </div>
+
 
   </div>
 
