--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <meta property="og:site_name" content="Neatgarms">
   <meta property="og:title" content="Neatgarms">
   <meta property="og:description" content="Design your own streetwear with Neat Customs. Create, launch, and flex your unique style. Limited runs. Exclusive drops.">
-  <meta property="og:image" content="https://emailsub.vercel.app/images/background.jpg">
+  <meta property="og:image" content="https://neatgarms.com/images/lp15m.webp">
   <meta property="og:url" content="https://neatgarms.com/">
   <meta property="og:type" content="website">
 
@@ -46,7 +46,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Neatgarms — Premium Urban Wear">
   <meta name="twitter:description" content="Explore our modern streetwear collections and elevate your look.">
-  <meta name="twitter:image" content="https://emailsub.vercel.app/images/background.jpg">
+  <meta name="twitter:image" content="https://neatgarms.com/images/lp15m.webp">
 
 
   <!-- Organization structured data -->
